2007-12-04  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-parser.y: list_functions, not list_pred_func.
	

2007-10-17  Francois Felix Ingrand  <felix@ingrand.net>

	* lex-parser-def.l (YY_INPUT):
	yy_current_buffer->yy_is_interactive is replaced with
	YY_CURRENT_BUFFER->yy_is_interactive to please flex >2.5.4
	removed #if 0 code...

2007-06-22  Maxime Ransan  <mransan@laas.fr>

	* action.c: add 3 functions to enable openprs to write in multiple
	files. Those functions were originally meant to enable several lof
	files for an openprs application. (functions are: action_log_init
	, action_log_printf , action_log_end).

	* new_default.opf: add the corresponding action OPs to interface
	with the functions listed above.

2006-08-30  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-function.c : LONG_LONG are now properly supported thru all
	evaluable functions using INTEGER (+, - , * , / etc...)

	* ev-predicate.c : LONG_LONG are now properly supported thru all
	evaluable predicates using INTEGER... (ABS, <, >, <=, >=, NUMBERP

2006-08-28  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-dump.c: New version number... to support long long...

	* Too many... added initial support for long long... beware,
	No arithmetic operation are allowed with them for
	now... Basically, you can read/print them, get them and pass them
	back to external function (which was the initial reason to add
	them). I will soon add the basic arithmetic functions and
	predicate... meanwhile check error message for UNSUPORTED types.

	* lex-macro.l: Added long long parsing.

	* ev-function.c (make_window_ef): Added a function definition...

	* xoprs-call.c: Added stdlib.h
	* oprs-rerror.c: Idem
	* oprs-cat.c: Idem
	* ope-parser.y: Idem

	* xoprs-icon.bit: char * and not unsigned char *...

	* oprs-client.c: accept_oprs_client, accept takes a socklen_t as
	arg... not an int.
	* mp.c (main): Idem...
	
	
2006-02-23  Francois Felix Ingrand  <felix@ingrand.net>
